# snipper

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
src/: api.rs  error.rs  lib.rs  operation.rs
src/drawing_algorithm/: builder.rs  builder_list.rs  drawing_algorithm.rs  mod.rs  partition.rs  routes.rs
src/edge/: edge.rs  mod.rs  queue.rs
src/helpers/: approx_eq.rs  mod.rs
src/intersection_algorithm/: bentley_ottmann.rs  constraint.rs  dirty_records.rs  mod.rs  position.rs  ray.rs  scope.rs  snippet.rs  stack.rs  support.rs  test.rs  traverse.rs
src/primitives/: bounds.rs  intersection.rs  line.rs  mod.rs  point.rs  position.rs  sector.rs  straight.rs  vector.rs
src/shape/: mod.rs  path.rs  polygon.rs  shape.rs  triangular_matrix.rs
src/test/: mod.rs  test_helper.rs
src/units/: coordinate.rs  float.rs  integer_decode.rs  mod.rs  pseudoangle.rs
tests/: integration_test.rs  test_helper.rs
