[package]
name = "snipper"
version = "0.1.0"
authors = ["lame-impala <workerman@seznam.cz>"]
edition = "2018"

[dependencies]
priority-queue = "0.5.2"
lazy_static = "1.3.0"
itertools = "0.8.0"
rand = "0.6.5"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true